@@ -42,7 +42,7 @@ npc_data_insects = {
         Key.CHAR: 'r',
         Key.COLOR: colors.light_amber,
         Key.DESCR: 'Waddling upright like a clumsy child, the twitching antennae and multitude of jittering legs quickly dispell any passing resemblance.',
-        Key.MAX_HP: (10, 20),
+        Key.MAX_HP: (5, 10),
         Key.MAX_STAMINA: (60, 60),
         Key.BASE_ARMOR: (0, 0),
         Key.BASE_STRENGTH: (1, 2),
@@ -62,7 +62,7 @@ npc_data_insects = {
         Key.NAME: 'Dung Beetle',
         Key.CHAR: 'd',
         Key.COLOR: colors.beige,
-        Key.DESCR: "There is something uniquely unsettling about a giant beetle acting like an agitated bull. It's also the size of one, if you were wondering.",
+        Key.DESCR: "About the size of a pony, this giant beetle still acts like an agitated bull.",
         Key.MAX_HP: (12, 24),
         Key.MAX_STAMINA: (80, 80),
         Key.BASE_ARMOR: (1, 3),
@@ -111,7 +111,7 @@ npc_data_insects = {
         Key.NAME: 'Spitting Beetle',
         Key.CHAR: 'b',
         Key.COLOR: colors.light_green,
-        Key.DESCR: "Viscous fluid seeps along tubal appendages towards its front.",
+        Key.DESCR: "Viscous fluid seeps along tubal appendages attached to it's 'face'.",
         Key.MAX_HP: (6, 8),
         Key.MAX_STAMINA: (60, 60),
         Key.BASE_ARMOR: (0, 2),
