@@ -3,7 +3,7 @@ from data.data_enums import Key, Material, Condition, Craftsmanship
 classes_data = {
     'generic': {
         Key.NAME : 'generic',
-        Key.MAX_HP : (60, 60),
+        Key.MAX_HP : (120, 120),
         Key.MAX_STAMINA: (200, 200),
         Key.BASE_ARMOR: (0, 0),
         Key.BASE_STRENGTH: (3, 3),
