@@ -12,7 +12,7 @@ from components.inventory.inventory import Inventory
 from components.skills.skillList import SkillList
 from data.actor_data.npc_summons import spawn_data_summons
 from data.data_enums import Key, MonsterType
-from data.actor_data import act_classes
+from data.actor_data import player_classes
 from data.data_util import enum_pairs_to_kwargs
 from gameobjects.block_level import BlockLevel
 from gameobjects.entity import Entity
