@@ -6,3 +6,10 @@
 09/02/2020
 - GUI: options are now properly wrapped if they are longer than the max window width
 - GUI: improved manual code. text is now wrapped dynamically, page display is cleaner and pages can be scrolled up & down
+
+10/02/2020
+- BUG: fixed issue with options wrapping
+
+13/02/2020
+- BUG: AV was not properly calculated
+- GUI: (e) now opens menu with only equippable items
